--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@
         border: 1px solid #ccc;
         border-radius: 8px;
         box-sizing: border-box;
+        position: relative;
+        box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
       }
       
       input[type=submit] {
@@ -47,13 +49,15 @@
       
       
       #myInput {
-        position: sticky;
+        color:black;
+        width: 80%;
+        position: relative;
         z-index: 2;
         box-sizing: border-box;
         background-position: 14px 12px;
         background-repeat: no-repeat;
         font-size: 16px;
-        padding: 14px 20px 12px 45px;
+        /* padding: 14px 20px 12px 45px; */
         border: none;
         border-bottom: 1px solid #ddd;
          box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
